--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<img src="https://pbs.twimg.com/media/Eza0O_uUcAAlqBd.jpg" width="100%">
+<DOCTYPE! html>
+<html>
+	<head>
+	</head>
+	<body>
+		<img src="https://64.media.tumblr.com/5d1628c51c2ed806c44c370985da8904/tumblr_px5cc51lre1v7dl8uo1_1280.jpg" width="100%">
+	</body>
+</html>
