--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <DOCTYPE! html>
 <html>
 	<head>
+		<meta charset="UTF-8">
+		<meta lang="es"> 
 	</head>
 	<body>
+		<header>
+			<h1>This is my favorites pictures from LAM</h1>
+		</header>
 		<img src="https://64.media.tumblr.com/5d1628c51c2ed806c44c370985da8904/tumblr_px5cc51lre1v7dl8uo1_1280.jpg" width="100%">
+		<img src="https://pbs.twimg.com/media/D-D15znUEAAnCZn.jpg" width="100%">
 	</body>
 </html>
