--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta lang="es"> 
+		<title> umi job</title>
 	</head>
 	<body>
 		<header>
@@ -10,5 +11,6 @@
 		</header>
 		<img src="https://64.media.tumblr.com/5d1628c51c2ed806c44c370985da8904/tumblr_px5cc51lre1v7dl8uo1_1280.jpg" width="100%">
 		<img src="https://pbs.twimg.com/media/D-D15znUEAAnCZn.jpg" width="100%">
+		<img src="https://i.pinimg.com/originals/f8/e0/62/f8e0629e17b5631536b55c3febd312b5.png" width="100%">
 	</body>
 </html>
