LAM profile putted

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>This is my favorites pictures from LAM</h1>
+			<h1>This is my favorites pictures from <a href="https://twitter.com/ramdayo1122">LAM</a></h1>
 		</header>
 		<img src="https://64.media.tumblr.com/5d1628c51c2ed806c44c370985da8904/tumblr_px5cc51lre1v7dl8uo1_1280.jpg" width="100%">
 		<img src="https://pbs.twimg.com/media/D-D15znUEAAnCZn.jpg" width="100%">
