--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <DOCTYPE! html>
-<html>
+<html lang="es">
 	<head>
 		<meta charset="UTF-8">
-		<meta lang="es"> 
 		<title> umi job</title>
 	</head>
 	<body>
