changes almost already.

--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <DOCTYPE! html>
 <html lang="es">
 	<head>
+		<link href="style.css" rel="stylesheet" type="text/css">
+		<meta viewport>
 		<meta charset="UTF-8">
-		<title> umi job</title>
+		<title>umi job</title>
 	</head>
-	<body>
-		<header>
-			<h1>This is my favorites pictures from <a href="https://twitter.com/ramdayo1122">LAM</a></h1>
-		</header>
-		<img src="https://64.media.tumblr.com/5d1628c51c2ed806c44c370985da8904/tumblr_px5cc51lre1v7dl8uo1_1280.jpg" width="100%">
-		<img src="https://pbs.twimg.com/media/D-D15znUEAAnCZn.jpg" width="100%">
-		<img src="https://i.pinimg.com/originals/f8/e0/62/f8e0629e17b5631536b55c3febd312b5.png" width="100%">
-		<img src="https://i.pinimg.com/originals/cb/11/26/cb11268d5d100cbf5923661d5c42b85a.jpg" width="100%"100>
-		<img src="https://pbs.twimg.com/media/EMdebgvUEAEGUiu.jpg" width="100%">
+	<body>	
+		<div class="body-div">
+			<div class="div-image-cointainer">
+				<img src="https://github.com/u-m-i/u-m-i.github.io/blob/master/marco.png?raw=true">
+			</div>
+		</div>
+		<!-- <div class="box-text"></div>
+		<div class="box-text"></div>
+		<div class="box-text"></div> -->
 	</body>
 </html>
