--- a/index.html
+++ b/index.html
@@ -7,13 +7,8 @@
 		<title>umi job</title>
 	</head>
 	<body>	
-		<div class="body-div">
-			<div class="div-image-cointainer">
-				<img src="https://github.com/u-m-i/u-m-i.github.io/blob/master/marco.png?raw=true">
-			</div>
-		</div>
-		<!-- <div class="box-text"></div>
-		<div class="box-text"></div>
-		<div class="box-text"></div> -->
+		<p class="box-text sqr_1">Acá terminará todo</p>
+		<p class="box-text sqr_2">Aún falta para llegar aquí</p>
+		<p class="box-text sqr_3">Explora este lugar</p> 
 	</body>
 </html>
