--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="es">
 	<head>
 		<link href="style.css" rel="stylesheet" type="text/css">
-		<meta viewport>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="UTF-8">
 		<title>umi job</title>
 	</head>
-	<body>	
+	<body>
+		<img src="asset_ac_4.png">
 		<p class="box-text sqr_1">Acá terminará todo</p>
 		<p class="box-text sqr_2">Aún falta para llegar aquí</p>
-		<p class="box-text sqr_3">Explora este lugar</p> 
+		<p class="box-text sqr_3">Explora este lugar</p>
+		<div class="box-blue"></div> 
 	</body>
 </html>
