The image quality and size was changed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>umi job</title>
 	</head>
 	<body>
-		<img src="asset_ac_4.png">
+		<div class="bg"></div>
 		<p class="box-text sqr_1">Acá terminará todo</p>
 		<p class="box-text sqr_2">Aún falta para llegar aquí</p>
 		<p class="box-text sqr_3">Explora este lugar</p>
