--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <DOCTYPE! html>
 <html lang="es">
-	<head>
-		<link href="style.css" rel="stylesheet" type="text/css">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta charset="UTF-8">
-		<title>umi job</title>
-	</head>
-	<body>
-		<div class="bg"></div>
-		<p class="box-text sqr_1">Acá terminará todo</p>
-		<p class="box-text sqr_2">Aún falta para llegar aquí</p>
-		<p class="box-text sqr_3">Explora este lugar</p>
-		<div class="box-blue"></div> 
-	</body>
+<head>
+	<link href="css/main.css" rel="stylesheet" type="text/css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8">
+	<title>umi job</title>
+</head>
+<body>
+	<div class="bg"></div>
+	<p class="box-text rect_1">Acá terminará todo</p>
+	<p class="box-text rect_2">Aún falta para llegar aquí</p>
+	<p class="box-text rect_3">Explora este lugar</p>
+	<div class="box-blue"></div> 
+</body>
 </html>
