--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 	<div class="bg"></div>
-	<p class="box-text rect_1">Acá terminará todo</p>
-	<p class="box-text rect_2">Aún falta para llegar aquí</p>
-	<p class="box-text rect_3">Explora este lugar</p>
-	<div class="box-blue"></div> 
+	<a href="link.html" target="_blank"><p class="box-text rect_1">Acá terminará todo</p></a>
+	<a href="https://platzi.com/p/umi/" target="_blank"><p class="box-text rect_2">Aún falta para llegar aquí</p></a>
+	<a href="https://app.codesignal.com/login" target="_blank"><p class="box-text rect_3">Explora este lugar</p></a>
+	<a href="https://www.freecodecamp.org/learn/?messages=success%5B0%5D%3Dflash.signin-success" target="_blank"><div class="box-blue"></div></a>
 </body>
 </html>
