Already to start and basic header structure ready

--- a/index.html
+++ b/index.html
@@ -1,16 +1,33 @@
-<DOCTYPE! html>
-<html lang="es">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<link href="css/main.css" rel="stylesheet" type="text/css">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/main.css">
 	<meta charset="UTF-8">
-	<title>umi job</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Mar blog</title>
 </head>
 <body>
-	<div class="bg"></div>
-	<a href="link.html" target="_blank"><p class="box-text rect_1">Acá terminará todo</p></a>
-	<a href="https://platzi.com/p/umi/" target="_blank"><p class="box-text rect_2">Aún falta para llegar aquí</p></a>
-	<a href="https://app.codesignal.com/login" target="_blank"><p class="box-text rect_3">Explora este lugar</p></a>
-	<a href="https://www.freecodecamp.org/learn/?messages=success%5B0%5D%3Dflash.signin-success" target="_blank"><div class="box-blue"></div></a>
+	<header>
+		<section>
+			<div>
+				<a href="/">Facebook</a>
+				<a href="/">Twitter</a>
+				<a href="/">Instagram</a>
+				<a href="/">LinkedIn</a>
+				<a href="/">Youtube</a>
+			</div>
+		</section>
+		<nav>
+			<section>
+				<a href="#">Logo</a>
+			</section>
+			<section>
+				<a href="/">About me</a>
+			</section>	
+
+		</nav>
+	</header>
+	
 </body>
 </html>
