Almost ready the nav

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 	<header>
-		<section>
-			<div>
+		<section class="header-icons-container">
+			<div class="icons">
 				<a href="/">Facebook</a>
 				<a href="/">Twitter</a>
 				<a href="/">Instagram</a>
@@ -19,10 +19,10 @@
 			</div>
 		</section>
 		<nav>
-			<section>
+			<section class="nav-logo-container">
 				<a href="#">Logo</a>
 			</section>
-			<section>
+			<section class="profile-link">
 				<a href="/">About me</a>
 			</section>	
 
