First fraction of the header ready

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="assests/font/flaticon.css"
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,17 +11,17 @@
 <body>
 	<header>
 		<section class="header-icons-container">
-			<div class="icons">
-				<a href="/">Facebook</a>
-				<a href="/">Twitter</a>
-				<a href="/">Instagram</a>
-				<a href="/">LinkedIn</a>
-				<a href="/">Youtube</a>
+			<div class="icons">	
+				<a href="/"><span class="fimanager flaticon-001-facebook""></span></a>
+				<a href="/"><span class="fimanager flaticon-002-twitter"></span></a>
+				<a href="/"><span class="fimanager flaticon-011-instagram"></span></a>
+				<a href="/"><span class="fimanager flaticon-010-linkedin"></span></a>
+				<a href="/"><span class="fimanager flaticon-008-youtube"></span></a>
 			</div>
 		</section>
 		<nav>
 			<section class="nav-logo-container">
-				<a href="#">Logo</a>
+				<a href="#"><img src="/" alt="my blog"></a>
 			</section>
 			<section class="profile-link">
 				<a href="/">About me</a>
