Almost index done

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="assests/font/flaticon.css"
+	<link rel="stylesheet" href="css/font/flaticon.css"
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,14 +21,18 @@
 		</section>
 		<nav>
 			<section class="nav-logo-container">
-				<a href="#"><img src="/" alt="my blog"></a>
+				<a href="#"><img src="assests/img/logo-negro.png" alt="my blog"></a>
 			</section>
 			<section class="profile-link">
 				<a href="/">About me</a>
 			</section>	
-
 		</nav>
 	</header>
-	
+	<main>
+		<img src="assests/img/cover.png" alt="my self">
+		<p></p>
+		<span></span>
+		
+	</main>
 </body>
 </html>
