Home done fellas

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 				<a href="#"><img src="assests/img/logo-negro.png" alt="my blog"></a>
 			</section>
 			<section class="profile-link">
-				<a href="/">About me</a>
+				<a href="/">Sobre mí</a>
 			</section>	
 		</nav>
 	</header>
-	<main>
-		<img src="assests/img/cover.png" alt="my self">
-		<p></p>
-		<span></span>
-		
+	<main class="home-main">
+		<section>
+			<h1 class="home-main-tittle">Conoce las novedades y noticias del mundo tech</h1>
+			<button class="home-main-button"><a href="blogs.html">Let's go</a></button>
+		</section>
 	</main>
 </body>
 </html>
