Have almost the blogs.html styles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Mar blog</title>
 </head>
-<body>
+<body class="home-body">
 	<header>
 		<section class="header-icons-container">
 			<div class="icons">	
