the singular blog done

--- a/blog.html
+++ b/blog.html
@@ -31,34 +31,34 @@
     <main>
 
         <section class="grid-container blogpost-img-container">
-            <img src="" alt="">
+            <img src="assests/img/post-2.png" alt="Escritorio">
         </section>
 
         <section class="blogpost-main-container">
             <div class="grid-container">
-                <h3></h3>
+                <h3>Noticias</h3>
                 <article>
-                    <h1></h1>
-                    <p></p>
-                    <p></p>
-                    <p></p>
+                    <h1>Título del Blogpost</h1>
+                    <p>Mi mejor amigo tiene una cabaña en Texas, un perro y dos pollos, le gusta salir en su camioneta a pesar y los domingos va a misa, no le gusta mirar tele, solo esucha la radio y su música preferida siempre tiene el banjo, mi amigo sabe vivir su vida.</p>
+                    <p>Mi mejor amigo tiene una cabaña en Texas, un perro y dos pollos, le gusta salir en su camioneta a pesar y los domingos va a misa, no le gusta mirar tele, solo esucha la radio y su música preferida siempre tiene el banjo, mi amigo sabe vivir su vida; i mejor amigo tiene una cabaña en Texas, un perro y dos pollos, le gusta salir en su camioneta a pesar y los domingos va a misa, no le gusta mirar tele, solo esucha la radio y su música preferida siempre tiene el banjo, mi amigo sabe vivir su vida. i mejor amigo tiene una cabaña en Texas, un perro y dos pollos, le gusta salir en su camioneta a pesar y los domingos va a misa, no le gusta mirar tele, solo esucha la radio y su música preferida siempre tiene el banjo, mi amigo sabe vivir su vida.</p>
+                    <p> Mi mejor amigo tiene una cabaña en Texas, un perro y dos pollos, le gusta salir en su camioneta a pesar y los domingos va a misa, no le gusta mirar tele, solo esucha la radio y su música preferida siempre tiene el banjo, mi amigo sabe vivir su vida.</p>
                 </article>
             </div>
         </section>
 
         <section class="contact-main-container">
             <div>
-                <img src="" alt="">
+                <img src="assests/img/013-newsletter.png" alt="Mi contacto">
                 <div class="contact-left">
-                    <a href=""></a>
-                    <p></p>
+                    <a href="" >Contacto</a>
+                    <p>Mi mejor amigo tiene una cabaña en Texas, un perro y dos pollos, le gusta salir en su camioneta a pesar</p>
                 </div>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="assests/img/006-like.png" alt="¿Te gustó?">
                 <div class="contact-right">
-                    <a href=""></a>
-                    <p></p>
+                    <a href="">Escribe</a>
+                    <p>Mi mejor amigo tiene una cabaña en Texas, un perro y dos pollos, le gusta salir en su camioneta a pesar</p>
                 </div>
             </div>
         </section>
