Main notice almost done

--- a/blog.html
+++ b/blog.html
@@ -24,21 +24,21 @@
 				<a href="#"><img src="assests/img/logo-negro.png" alt="my blog"></a>
 			</section>
 			<section class="profile-link">
-				<a href="/">Sobre mí</a>
+				<a href="/">Kinda me</a>
 			</section>	
 		</nav>
 	</header>
     <main>
 
         <section class="grid-container blogpost-img-container">
-            <img src="assests/img/post-2.png" alt="Escritorio">
+            <img src="assets/banner.jpg" alt="Escritorio">
         </section>
 
         <section class="blogpost-main-container">
             <div class="grid-container">
-                <h3>Noticias</h3>
+                <h3>News</h3>
                 <article>
-                    <h1>Título del Blogpost</h1>
+                    <h1>Now we know ancient egyptian's faces</h1>
                     <p>Mi mejor amigo tiene una cabaña en Texas, un perro y dos pollos, le gusta salir en su camioneta a pesar y los domingos va a misa, no le gusta mirar tele, solo esucha la radio y su música preferida siempre tiene el banjo, mi amigo sabe vivir su vida.</p>
                     <p>Mi mejor amigo tiene una cabaña en Texas, un perro y dos pollos, le gusta salir en su camioneta a pesar y los domingos va a misa, no le gusta mirar tele, solo esucha la radio y su música preferida siempre tiene el banjo, mi amigo sabe vivir su vida; i mejor amigo tiene una cabaña en Texas, un perro y dos pollos, le gusta salir en su camioneta a pesar y los domingos va a misa, no le gusta mirar tele, solo esucha la radio y su música preferida siempre tiene el banjo, mi amigo sabe vivir su vida. i mejor amigo tiene una cabaña en Texas, un perro y dos pollos, le gusta salir en su camioneta a pesar y los domingos va a misa, no le gusta mirar tele, solo esucha la radio y su música preferida siempre tiene el banjo, mi amigo sabe vivir su vida.</p>
                     <p> Mi mejor amigo tiene una cabaña en Texas, un perro y dos pollos, le gusta salir en su camioneta a pesar y los domingos va a misa, no le gusta mirar tele, solo esucha la radio y su música preferida siempre tiene el banjo, mi amigo sabe vivir su vida.</p>
