--- a/blogs.html
+++ b/blogs.html
@@ -40,10 +40,9 @@
                 <div class="blogs-news-info-container">
                     <h2>Noticia 1</h2>
                     <p> Mi mejor amigo tiene una cabaña en Texas un lindo perro y también dos pollos, le gusta salir en su camioneta a pescar y los domingos va a misa, mi amigo realmente vive su vida;  Mi mejor amigo tiene una cabaña en Texas un lindo perro y también dos pollos, le gusta salir en su camioneta a pescar y los domingos va a misa, mi amigo realmente vive su vida; </p> 
-                    <a href="" class="blogs-button">Leer más!</a>
+                    <a href="blog.html" class="blogs-button">Leer más!</a>
                 </div>      
             </div>  
-                  
         </section>
 
         <!-- Other News -->
