All done for the work

--- a/blog.html
+++ b/blog.html
@@ -37,11 +37,14 @@
         <section class="blogpost-main-container">
             <div class="grid-container">
                 <h3>News</h3>
-                <article>
+                <article class="container-news">
                     <h1>Now we know ancient egyptian's faces</h1>
-                    <p>A DNA extracted from a ancients 2000 years old egyptian mummies is offering a intriguing glimpse at what three men could looks like when they hung out on the Fertile Crescent, the genetic sleuthing led to highly detailed 3D constructions of a trio from an ancient Nile community</p>
-                    <p>To re-create the faces of the three egyptian men, the Parabon team turned to mummy DNA sequenced by researchers in Germany, at the University of Tubigen and the Max Planck Institute for the Science of Human History. They then extracted single nucleotide polymorphisms, which are makers in the genome that correspond to specific human characteristics such as eye and hair color and disease predisposition</p>
-                    <p> Mi mejor amigo tiene una cabaña en Texas, un perro y dos pollos, le gusta salir en su camioneta a pesar y los domingos va a misa, no le gusta mirar tele, solo esucha la radio y su música preferida siempre tiene el banjo, mi amigo sabe vivir su vida.</p>
+                    <p>A DNA extracted from a ancients 2000 years old egyptian mummies is offering a intriguing glimpse at what three men might’ve looked like at 25, when they hung out on the Fertile Crescent, the genetic sleuthing led to highly detailed 3D constructions of a trio from an ancient Nile community.</p>
+                    <p>The image [Shown above] results from DNA phenotyping, which predicts a person’s physical characteristics based on genetic data.The researchers modeled the likely width, height and depth of the heads and facial features in 3D. A forensic artist took over from there, bringing the handsome hipsters to life. This re-creations, is mark the first time comprehensive DNA phenotyping has been performed on human DNA this old, according to Virginia-based Parabon Based NanoLabs, the company behind the images. Parabon typically taps DNA phenotyping to help solve criminal cases, and the enterprise images presentation was at the 32nd International Symposium on Human Identification, which took place earlier in September in Orlando, Florida. The conference focuses on advances in forensics science.</p>
+                    <img src="assets/mummy.jpg" alt="" class="mummy">
+                    <h5>The royal mummy of Merneptah on display in Cairo showing the changes in facial features brought on by mummyfication</h5>
+                    <p>To recreate the faces of the three egyptian men, the Parabon team turned to mummy DNA sequenced by researchers in Germany, at the University of Tubigen and the Max Planck Institute for the Science of Human History. They then extracted single nucleotide polymorphisms, which are makers in the genome that correspond to specific human characteristics such as eye and hair color and disease predisposition.</p>
+                    <p>See original new <a target="_Blank" href="https://www.cnet.com/news/if-mummies-had-faces-scientists-use-dna-to-see-how-ancient-egyptians-looked/">here</a></p>
                 </article>
             </div>
         </section>
