[dev] Job stuff

--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
+   <link rel="stylesheet" href="src/home.css">
+   <link rel="stylesheet" href="src/forms.css">
+   <link rel="stylesheet" href="src/footer.css">
+   <link rel="stylesheet" href="src/video_record.css">
 
-    <script src="./src/sketch.test.js" type="module"></script>
-
-    <link rel="stylesheet" href="./static/index.css"/>
-  </head>
-  <body>
-  </body>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Reality Life</title>
+</head>
+<body>
+   <div class="brand-band__div">
+      <img class="brand-logo" src="../static/logo-removebg-preview.png" alt="">
+      <q class="quote" >Keep your memories and knowledge always alive</q>
+   </div>
+   <nav class="generic-nav-bar__nav">
+      <button class="panel-option__button">Home</button>
+      <button class="panel-option__button">About us</button>
+      <button class="panel-option__button">Team</button>
+      <button class="panel-option__button">Demo</button>
+      <button class="panel-option__button">Pricing</button>
+      <button class="panel-option__button">Contact us</button>
+      <button class="panel-option__button">Sign In</button>
+   </nav>
+   <main class="information__main">
+      <ul class="record-types__ul">
+	 <li class="record-type__li">
+	    <button class="record-type__button">Audio</button>
+	 </li>
+	 <li class="record-type__li">
+	    <button class="record-type__button">Video</button>
+	 </li>
+	 <li class="record-type__li">
+	    <button class="record-type__button">Text</button>
+	 </li>
+      </ul>
+   </main>
+   <a href="" download="" id="invisible-anchor__a"></a>
+   <script src="src/record.js"></script>
+   <footer class="generic-footer__footer">
+      <img src="" alt="" class="mini-logo__img">
+      <q class="quote mini-quote">Keep your memories and knowledge always alive</q>
+      <a href="" class="terms-link__a"></a>
+      <a href="" class="privacy-link__a"></a>
+      <a href="" class="cookies-link__a"></a>
+      <p class="copyright__p">Copyright</p>
+   </footer>
+</body>
 </html>
