[dev] Working first recording prototype

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
    <link rel="stylesheet" href="src/video_record.css">
 
    <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=yes, user-scalable=no">
+
    <title>Reality Life</title>
 </head>
 <body>
@@ -26,15 +27,15 @@
    </nav>
    <main class="information__main">
       <ul class="record-types__ul">
-	 <li class="record-type__li">
-	    <button class="record-type__button">Audio</button>
-	 </li>
-	 <li class="record-type__li">
-	    <button class="record-type__button">Video</button>
-	 </li>
-	 <li class="record-type__li">
-	    <button class="record-type__button">Text</button>
-	 </li>
+         <li class="record-type__li">
+            <button class="record-type__button">Audio</button>
+         </li>
+         <li class="record-type__li">
+            <button class="record-type__button">Video</button>
+         </li>
+         <li class="record-type__li">
+            <button class="record-type__button">Text</button>
+         </li>
       </ul>
    </main>
    <a href="" download="" id="invisible-anchor__a"></a>
