[dev] Responsive CSS

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
    <div class="brand-band__div">
       <img class="brand-logo" src="../static/logo-removebg-preview.png" alt="">
-      <q class="quote" >Keep your memories and knowledge always alive</q>
+      <q class="brand-quote__q ">Keep your memories and knowledge always alive</q>
    </div>
    <nav class="generic-nav-bar__nav">
       <button class="panel-option__button">Home</button>
@@ -42,7 +42,7 @@
    <script src="src/record.js"></script>
    <footer class="generic-footer__footer">
       <img src="" alt="" class="mini-logo__img">
-      <q class="quote mini-quote">Keep your memories and knowledge always alive</q>
+      <q class="brand-quote__q mini-quote">Keep your memories and knowledge always alive</q>
       <a href="" class="terms-link__a"></a>
       <a href="" class="privacy-link__a"></a>
       <a href="" class="cookies-link__a"></a>
