[dev] First complete app

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,20 +27,10 @@
       <button class="panel-option__button">Sign In</button>
    </nav>
    <main class="information__main">
-      <ul class="record-types__ul">
-         <li class="record-type__li">
-            <button class="record-type__button">Audio</button>
-         </li>
-         <li class="record-type__li">
-            <button class="record-type__button">Video</button>
-         </li>
-         <li class="record-type__li">
-            <button class="record-type__button">Text</button>
-         </li>
-      </ul>
    </main>
    <a href="" download="" id="invisible-anchor__a"></a>
    <script src="src/record.js"></script>
+   <script src="src/navegation.js"></script>
    <footer class="generic-footer__footer">
       <img src="" alt="" class="mini-logo__img">
       <q class="brand-quote__q mini-quote">Keep your memories and knowledge always alive</q>
