[dev] Meta header for charset added

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
    <link rel="stylesheet" href="src/forms.css">
    <link rel="stylesheet" href="src/footer.css">
    <link rel="stylesheet" href="src/video_record.css">
+   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
    <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=yes, user-scalable=no">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=yes, user-scalable=no"/>
 
    <title>Reality Life</title>
 </head>
