[dev] Registration form added

--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
          <button type="submit" class="generic-blue__button">INGRESAR</button>
          <p>¿Todavía no tienes una cuenta? <a href="">Regístrate aquí</a></p>
       </form>
+      <form method="POST" class="sign-account__form">
+         <input  class="new-account-field__input" type="text" name="forename" placeholder="INGRESA TU NOMBRE">
+         <input class="new-account-field__input" type="text" name="surname" placeholder="INGRESA TU APELLIDO">
+         <input class="new-account-field__input" type="email" name="email" placeholder="INGRESA TU CORREO">
+         <input class="new-account-field__input" type="password" name="password" placeholder="INGRESA TU CONTRASEÑA">
+         <button type="submit" class="generic-blue__button">REGISTRARME</button>
+      </form>
    </main>
    <a href="" download="" id="invisible-anchor__a"></a>
    <script src="src/record.js"></script>
