[dev] terminal style and input listener

--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 
+<!DOCTYPE>
+<html>
+<head>
+   <link rel="stylesheet" href="css/terminal.css">
+</head>
 
 <body>
+   <section class="terminal-prompt" id="tty1">
+      <p class="terminal-name">
+      unkown@u-m-i
+      </p>
+      <q class="finish-symbol">
+      $
+      </q>
+      <input type="text" class="terminal-prompter" autofocus/>
+   </section>
+</body>
 <script>
 
 let defaultHost = "u-m-i";
@@ -23,12 +38,35 @@ class Output extends HTMLElement
    }
 }
 
+let tty1 = document.getElementById("tty1");
+
+let tty1Input = tty1.children[2];
+
+tty1Input.addEventListener("keydown", (event) =>
+{
+   console.log(event.key);
+
+   if(tty1Input.value.length === 0 && event.key === "Backspace")
+   {
+      console.log("Doing nothing!");
+      return;
+   }
+
+   if(event.key === "Enter")
+   {
+      console.log(tty1Input.value);
+   }
+});
+
+
+function jumpLine()
+{
+}
+
+
+function insertOutput()
+{
+}
+
 </script>
-   <section class="terminal-prompt" id="tty1">
-      <p class="terminal-name">
-      </p>
-      <q class="finish-symbol">
-      </q>
-      <input type="text" class="terminal-prompter">
-   </section>
-</body>
+</html>
